Fix alignment and style of ETH -> USD conversion in create payment

--- a/src/modules/dashboard/components/CreatePaymentDialog/CreatePaymentDialogForm.css
+++ b/src/modules/dashboard/components/CreatePaymentDialog/CreatePaymentDialogForm.css
@@ -9,7 +9,19 @@
   margin-left: 20px;
 }
 
+.tokenAmountContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
+  gap: 20px;
+}
+
 .tokenAmountUsd {
+  width: 100%;
+  font-size: 11px !important;
+  font-weight: 700;
+  text-align: right;
   justify-self: right;
 }
 
